Build/third-party-libraries/packages/nuget.org/system.collections.nongeneric/4.0.1/readme.md
System.Collections.NonGeneric [4.0.1](https://www.nuget.org/packages/System.Collections.NonGeneric/4.0.1)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides classes that define older non-generic collections of objects, such as lists, queues, hash tables and dictionaries. Developers should prefer the generic collections in the System.Collections package.

Commonly Used Types:
System.Collections.ArrayList
System.Collections.Hashtable
System.Collections.CollectionBase
System.Collections.ReadOnlyCollectionBase
System.Collections.Stack
System.Collections.SortedList
System.Collections.DictionaryBase
System.Collections.Queue
System.Collections.Comparer
System.Collections.CaseInsensitiveComparer
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 1
-----------

|Name|Version|
|----------|:----|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|

*This page was generated by a tool.*